# ubet-render

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
.zed/: settings.json
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  main.rs  validation.rs
src-tauri/src/commands/: hardware.rs  mod.rs  pipeline.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/models/: job.rs  media.rs  mod.rs  settings.rs
src-tauri/src/pipeline/: audio_pool.rs  mod.rs  muxer.rs  video_loop.rs
src-tauri/src/utils/: event.rs  fs.rs  mod.rs
src/components/: index.ts
src/components/layout/: AppHeader.tsx  JobTable.tsx  LogViewer.tsx  SettingsCard.tsx
src/components/media/: SourceSelector.tsx
src/components/ui/: HardwareInfo.tsx  LogLine.tsx  OverallProgress.tsx  StatusBadge.tsx
src/core/: config-context.tsx  config.ts  types.ts
src/hooks/: useDragDrop.ts  useHardware.ts  usePersistedConfig.ts  usePipeline.ts
