[package]
name = "ubet-render"
version = "0.1.0"
authors = ["ubet"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
anyhow = "1"
tauri-plugin-dialog = "2"
rand = "0.8"
chrono = "0.4"
tauri-plugin-notification = "2"
futures = "0.3"
